updated-package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ashwin-athappan.github.io/algo-visualizer-deploy",
 	"name": "algo-visualizer",
 	"version": "1.0.0",
 	"license": "UNLICENSED",
